[metadata]
name = reviewstats
summary = Review statistics generator.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    reviewstats

[compile_catalog]
directory = reviewstats/locale
domain = reviewstats

[update_catalog]
domain = reviewstats
output_dir = reviewstats/locale
input_file = reviewstats/locale/reviewstats.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = reviewstats/locale/reviewstats.pot

[entry_points]
console_scripts =
    bugstats = reviewstats.cmd.bugstats:main
    openapproved = reviewstats.cmd.openapproved:main
    openreviews = reviewstats.cmd.openreviews:main
    reviewers = reviewstats.cmd.reviewers:main
    reviews_for_bugs = reviewstats.cmd.reviews_for_bugs:main
