[metadata]
name = reviewstats
summary = Review statistics generator.
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages =
    reviewstats

[entry_points]
console_scripts =
    bugstats = reviewstats.cmd.bugstats:main
    openapproved = reviewstats.cmd.openapproved:main
    openreviews = reviewstats.cmd.openreviews:main
    reviewers = reviewstats.cmd.reviewers:main
    reviews_for_bugs = reviewstats.cmd.reviews_for_bugs:main
